--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -10,7 +10,7 @@
       <%= render 'details_summary_stats' %>
       <div class="summary-graph campaign-details__graph">
         <div class="summary-graph__selector">
-          <group-date-selector initial-group="<%= @date_group_by.to_s %>"></group-date-selector>
+          <group-date-selector initial-group="<%= date_group_by.to_s %>"></group-date-selector>
         </div>
         <div class="summary-graph__graph">
           <chart v-bind:series="<%= campaign_graph_data(@campaign_stat).to_json %>" group-by="<%= @date_group_by.to_s %>" ></chart>
