--- a/app/views/campaigns/_campaign_summary.html.erb
+++ b/app/views/campaigns/_campaign_summary.html.erb
@@ -1,11 +1,15 @@
 <a href="<%= campaign_path(campaign) %>" class="campaign-option" >
-  <h2 class="campaign-option__title">
-    <%= campaign.name %>
+  <div class="campaign-option__header">
+    <div>
+      <h2 class="campaign-option__title">
+        <%= campaign.name %>
+      </h2>
+      <h5 class="campaign-option__date-range">
+        <%= campaign_date_range(campaign) %>
+      </h5>
+    </div>
     <%= image_tag(campaign.logo, class: 'campaign-option__logo') if campaign.logo.attached? %>
-  </h2>
-  <h5 class="campaign-option__date-range">
-    <%= campaign_date_range(campaign) %>
-  </h5>
+  </div>
   <div class="campaign-option__stats-container">
     <% summary_stats_elements(stats).each do |element| %>
       <div class="campaign-option__stat">
