--- a/app/assets/stylesheets/app/campaigns.scss
+++ b/app/assets/stylesheets/app/campaigns.scss
@@ -89,8 +89,12 @@
   }
 
   &__content {
-    display: flex;
-    flex-direction: column;
+    margin: auto 0;
+
+    @media only screen and (min-width: #{$mobile-breakpoint}) {
+      display: flex;
+      flex-direction: column;
+    }
   }
 
   &__value {
