--- a/app/assets/stylesheets/app/devise.scss
+++ b/app/assets/stylesheets/app/devise.scss
@@ -5,26 +5,37 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  padding-top: 36px;
+
+  @media only screen and (min-width: #{$mobile-breakpoint}) {
+    padding-top: 36px;
+  }
 
   &__container {
-    width: 446px;
-    height: 494px;
+    align-items: center;
+    background-color: $white;
+    background-image: image-url('login-corner-right.svg');
+    background-position: right bottom;
+    background-repeat: no-repeat;
+    box-sizing: border-box;
     display: flex;
     flex-direction: row;
-    align-items: center;
+    height: calc(100vh - 64px);
     justify-content: center;
-    background-color: $white;
-    background-image: image_url('login-corner-left.svg'), image_url('login-corner-right.svg');
-    background-position: left top, right bottom;
-    background-repeat: no-repeat;
-    border-radius: 5px;
+    padding-bottom: 130px;
+    width: 100%;
+
+    @media only screen and (min-width: #{$mobile-breakpoint}) {
+      background-image: image-url('login-corner-left.svg'), image-url('login-corner-right.svg');
+      background-position: left top, right bottom;
+      border-radius: 5px;
+      height: auto;
+      padding: 130px 0;
+      width: 446px;
+    }
   }
 
   &__form {
-    display: flex;
     width: 70%;
-    flex-direction: column;
   }
 
   &__form-title {
