--- a/app/assets/stylesheets/app/campaigns.scss
+++ b/app/assets/stylesheets/app/campaigns.scss
@@ -141,15 +141,19 @@
     background-color: $white;
     border: $app-content-border;
     box-shadow: 0 0 18px 0 $app-sidebar-shadow-color;
+    display: none;
+    flex: 15%;
     margin-top: 5px;
     opacity: .88;
     padding: 0 25px;
-    width: 176px;
+
+    @media only screen and (min-width: #{$mobile-breakpoint}) {
+      display: block;
+    }
   }
 
   &__main {
     padding: 25px 55px;
-    width: calc(100% - 338px);
   }
 
   &__filters-container {
