--- a/app/assets/stylesheets/app/campaigns.scss
+++ b/app/assets/stylesheets/app/campaigns.scss
@@ -129,8 +129,8 @@
     font-family: $main-font;
     font-weight: bold;
     line-height: 26px;
-    margin: 25px 0 6px;
-    padding: 0 16px;
+    margin: 25px 0;
+    padding: 0 25px;
   }
 
   &__sidebar {
@@ -142,10 +142,10 @@
     flex: 0 0 226px;
     margin-top: 5px;
     opacity: .88;
-    padding: 0 25px;
 
     @media only screen and (min-width: #{$mobile-breakpoint}) {
-      display: block;
+      display: flex;
+      flex-direction: column;
     }
   }
 
@@ -161,7 +161,8 @@
   }
 
   &__filters-container {
-    margin-top: 20px;
+    flex: 1;
+    padding: 0 25px;
   }
 
   &__filter {
@@ -172,6 +173,25 @@
     border: $app-filter-border;
     margin: 15px 0;
     opacity: .3;
+  }
+
+  &__filter-buttons-container {
+    background-color: $white;
+    border-bottom: $app-content-border;
+    border-top: $app-content-border;
+    bottom: 0;
+    display: flex;
+    justify-content: space-between;
+    padding: 19px;
+    position: sticky;
+  }
+
+  &__filter-button {
+    color: $app-filter-color;
+    cursor: pointer;
+    font-family: $main-font;
+    font-size: 14px;
+    font-weight: bold;
   }
 
   &__summary {
