--- a/app/views/campaigns/_details_campaign_filters.html.erb
+++ b/app/views/campaigns/_details_campaign_filters.html.erb
@@ -17,10 +17,10 @@
   </div>
   <div class="campaign-details__filter-separator"></div>
   <div class="campaign-details__filter">
-    <datetime-picker initial-value="<%= after_date %>" query-param="after" :placeholder="$t('messages.campaignDetails.filters.afterDate')"></datetime-picker>
+    <datetime-picker query-param="after" :placeholder="$t('messages.campaignDetails.filters.afterDate')"></datetime-picker>
   </div>
   <div class="campaign-details__filter">
-    <datetime-picker initial-value="<%= before_date %>" query-param="before" :placeholder="$t('messages.campaignDetails.filters.beforeDate')"></datetime-picker>
+    <datetime-picker query-param="before" :placeholder="$t('messages.campaignDetails.filters.beforeDate')"></datetime-picker>
   </div>
   <div class="campaign-details__filter-separator"></div>
   <div class="campaign-details__filter">
