--- a/app/assets/stylesheets/app/campaigns.scss
+++ b/app/assets/stylesheets/app/campaigns.scss
@@ -139,7 +139,7 @@
     box-shadow: 0 0 18px 0 $app-sidebar-shadow-color;
     box-sizing: border-box;
     display: none;
-    flex: 0 0 226px;
+    width: 226px;
     margin-top: 5px;
     opacity: .88;
 
