--- a/app/assets/stylesheets/app/campaigns.scss
+++ b/app/assets/stylesheets/app/campaigns.scss
@@ -133,19 +133,43 @@
     padding: 0 25px;
   }
 
+  &__display_filters_button {
+    cursor: pointer;
+    padding: 0 10px;
+    width: 100%;
+
+    @media only screen and (min-width: #{$mobile-breakpoint}) {
+      display: none;
+    }
+  }
+
   &__filters-container {
     background-color: $white;
     border: $app-content-border;
     box-shadow: 0 0 18px 0 $app-sidebar-shadow-color;
     box-sizing: border-box;
-    display: none;
-    width: 226px;
-    margin-top: 5px;
-    opacity: .88;
+    bottom: 0;
+    height: 0;
+    left: 0;
+    position: fixed;
+    right: 0;
+    top: auto;
+    transition: .5s height;
+    width: 100%;
+    z-index: 200;
+
+    &--open {
+      height: 100%;
+    }
 
     @media only screen and (min-width: #{$mobile-breakpoint}) {
+      width: 226px;
+      margin-top: 5px;
       display: flex;
       flex-direction: column;
+      height: calc(100% - 5px);
+      opacity: .88;
+      position: unset;
     }
   }
 
