--- a/app/assets/stylesheets/app/campaigns.scss
+++ b/app/assets/stylesheets/app/campaigns.scss
@@ -173,6 +173,13 @@
     }
   }
 
+  &__filters-header-container {
+    display: flex;
+    justify-content: space-between;
+    margin: 25px 0;
+    padding: 0 25px;
+  }
+
   &__main {
     box-sizing: border-box;
     margin: 0 auto;
