--- a/app/assets/stylesheets/app/components/filters-container.scss
+++ b/app/assets/stylesheets/app/components/filters-container.scss
@@ -54,6 +54,7 @@
     display: flex;
     justify-content: space-between;
     margin: 25px 0;
+    min-height: 26px;
     padding: 0 25px;
   }
 
@@ -63,6 +64,14 @@
     font-weight: bold;
     line-height: 26px;
     margin: 0;
+  }
+
+  &__close-button {
+    width: 16px;
+
+    @media only screen and (min-width: #{$mobile-breakpoint}) {
+      display: none;
+    }
   }
 
   &__filters {
