--- a/app/assets/stylesheets/app/components/filters-container.scss
+++ b/app/assets/stylesheets/app/components/filters-container.scss
@@ -30,6 +30,7 @@
     flex-direction: column;
     height: 0;
     left: 0;
+    overflow: auto;
     position: fixed;
     right: 0;
     top: auto;
@@ -45,6 +46,7 @@
       height: calc(100% - 5px);
       margin-top: 5px;
       opacity: .88;
+      overflow: unset;
       position: unset;
       width: 226px;
     }
