--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -17,17 +17,21 @@
           <group-date-selector initial-group="<%= date_group_by.to_s %>"></group-date-selector>
         </div>
         <div class="summary-graph__graph">
-          <chart v-bind:series="<%= campaign_graph_data(@campaign_stat).to_json %>" group-by="<%= @date_group_by.to_s %>" ></chart>
+          <chart :series="<%= campaign_graph_data(@campaign_stat).to_json %>"
+                 :start-date="<%= start_date(@campaign_stat).to_json %>"
+                 :end-date="<%= end_date(@campaign_stat).to_json %>"
+                 group-by="<%= @date_group_by.to_s %>">
+          </chart>
         </div>
       </div>
     </div>
   </div>
   <filters-container class="campaign-details__filters-container campaign-details__filters-container--mobile"
-                      :locations="<%= @locations.to_json %>"
-                      :brands="<%= @brands.to_json %>"
-                      :channels="<%= @channels.to_json %>"
-                      :communes="<%= @communes.to_json %>"
-                      :regions="<%= @regions.to_json %>"
-                      :genders="<%= gender_types_json %>">
+                     :locations="<%= @locations.to_json %>"
+                     :brands="<%= @brands.to_json %>"
+                     :channels="<%= @channels.to_json %>"
+                     :communes="<%= @communes.to_json %>"
+                     :regions="<%= @regions.to_json %>"
+                     :genders="<%= gender_types_json %>">
   </filters-container>
 </div>
