feat(group-date-selector): add basic disbled style

--- a/app/assets/stylesheets/app/components/group-date-selector.scss
+++ b/app/assets/stylesheets/app/components/group-date-selector.scss
@@ -39,6 +39,14 @@
       }
     }
 
+    &--disabled {
+      cursor: not-allowed;
+
+      &:hover {
+        background-color: $content-bg-color;
+      }
+    }
+
     &__content {
       font-family: $main-font;
       font-size: 12px;
