--- a/app/assets/stylesheets/app/campaigns.scss
+++ b/app/assets/stylesheets/app/campaigns.scss
@@ -174,6 +174,7 @@
 
     @media only screen and (min-width: #{$mobile-breakpoint}) {
       max-width: calc((100% - 48px)/7);
+      min-width: 155px;
     }
   }
 
