--- a/app/assets/stylesheets/app/components/stat.scss
+++ b/app/assets/stylesheets/app/components/stat.scss
@@ -13,8 +13,9 @@
     padding: 5px;
 
     @media only screen and (min-width: #{$mobile-breakpoint}) {
+      display: block;
       min-height: 66px;
-      padding: 20px 10px;
+      padding: 12px 10px;
     }
   }
 
@@ -26,31 +27,28 @@
     width: 35%;
 
     @media only screen and (min-width: #{$mobile-breakpoint}) {
+      margin: auto;
       width: 52px;
     }
   }
 
   &__data-container {
-    align-items: center;
-    display: flex;
-    flex: 1;
-    flex-direction: column;
-    justify-content: center;
+    align-self: center;
+    font-family: $main-font;
+    font-size: 16px;
+    letter-spacing: .4px;
+    line-height: 22px;
+    text-align: center;
+    width: 100%;
+
+    @media only screen and (min-width: #{$mobile-breakpoint}) {
+      margin-top: 10px;
+    }
   }
 
   &__data {
     color: $graph-primary-color;
-    font-family: $main-font;
-    font-size: 18px;
     font-weight: bold;
-    letter-spacing: 0.75px;
-    line-height: 24px;
-    margin-bottom: 4px;
-
-    @media only screen and (min-width: #{$mobile-breakpoint}) {
-      font-size: 28px;
-      line-height: 34px;
-    }
   }
 
   &__data--total-people {
@@ -64,13 +62,9 @@
   &__label {
     color: $primary-font-color;
     display: none;
-    font-family: $main-font;
-    font-size: 12px;
-    letter-spacing: 0.4px;
-    line-height: 14px;
 
     @media only screen and (min-width: #{$mobile-breakpoint}) {
-      display: block;
+      display: inline-block;
     }
   }
 
